k8s/payment-queue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-queue-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: payment-queue
  template:
    metadata:
      labels:
        component: payment-queue
    spec:
      containers:
        - name: payment-queue
          image: europe-west4-docker.pkg.dev/versatile-field-350813/web-scale-repository/payment-queue:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
            requests:
              memory: "1Gi"
              cpu: "1"
          command: [ "python" ]
          args: [ "consumer.py" ]
