k8s/stock-queue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-queue-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: stock-queue
  template:
    metadata:
      labels:
        component: stock-queue
    spec:
      containers:
        - name: stock-queue
          image: ptemarvelde/wdm-2022:stock-queue
          imagePullPolicy: Always
          resources:
            limits:
              memory: "250Mi"
              cpu: "550m"
            requests:
              memory: "150Mi"
              cpu: "300m"
          command: [ "python" ]
          args: [ "consumer.py" ]
