k8s/user-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  labels:
    app: order-service
    type: app-service
spec:
  type: ClusterIP
  selector:
    component: user
  ports:
    - port: 5000
      name: http
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: user
  template:
    metadata:
      labels:
        component: user
    spec:
      containers:
        - name: user
          image: ptemarvelde/wdm-2022:user
          imagePullPolicy: Always
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
            requests:
              memory: "1Gi"
              cpu: "1"
          command: [ "uvicorn" ]
          args: [ "app:app", "--host", "0.0.0.0", "--port", "5000" ]
          ports:
            - containerPort: 5000
